# cranpose

./: .gitignore  README.md  campose.py  generate_markers.ipynb  pose_from_single_image.py  pyproject.toml  requirements.txt  setup.py  utils.py
calib/: calibration_matrix_hikvision.npy  calibration_matrix_hikvision_720.npy  calibration_matrix_render.npy  calibration_matrix_render_calib.npy  distortion_coefficients_hikvision.npy  distortion_coefficients_render_calib.npy
core/: campose.py  estimators.py  posemultiple.py  posesingle.py  pyproject.toml  utils.py
cranpose/: cammovement.py  campose.py  default_config.yaml  estimators.py  utils.py
cranpose/detectors/: detector.py  utils.py
cranpose/detectors/deep/: deeptag_model_setting.py
cranpose/detectors/deep/fiducial_marker/: draw_chessboard_tag.py  runetag_model.py  unit_arucotag.py  unit_chessboard_tag.py  unit_runetag.py  unit_topotag.py
cranpose/detectors/deep/network/: decoder_net.py  detector_net.py  predictors.py
cranpose/detectors/deep/old/: detector.py  utils.py
cranpose/detectors/deep/stag_decode/: bbox_and_corner.py  detection_engine.py  keypoints.py  (+8 more)
cranpose/detectors/yolo/: inference.py
jupyters/: calc_camera_matrix.ipynb  demo_estimate_pose_hikvision.ipynb  demo_estimate_pose_hikvision_video.ipynb  demo_estimate_pose_render.ipynb  demo_estimate_pose_render_video.ipynb  estimate_pose_render.ipynb  generate_markers.ipynb  marker_poses.yaml  marker_poses_warehouse.yaml  sample_usage.ipynb
marker_configs/: marker_poses.yaml  marker_poses_warehouse.yaml  marker_poses_warehouse_Sanya.yaml
(+2 files in other folders)
